:bug: - fix: fixed the overlapping of the icon

--- a/src/components/form/formcontrol/formcontrol.scss
+++ b/src/components/form/formcontrol/formcontrol.scss
@@ -16,6 +16,7 @@
     .mykn-input,
     .mykn-select {
       width: 100%;
+      padding-right: 30px;
     }
   }
 }
